gccida/c1/decode_rtx_const
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4006:25: error: must use 'enum' tag to refer to type 'machine_mode'
void  decode_rtx_const( machine_mode mode, rtx x,  struct rtx_const *value) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4008:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4010:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v5; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4017:12: error: expected expression
*( _OWORD *)value = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4017:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)value = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4018:12: error: expected expression
*( _OWORD *)&value->un.vechi[13] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4018:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[13] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4019:12: error: expected expression
*( _OWORD *)&value->un.vechi[11] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4019:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[11] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4020:12: error: expected expression
*( _OWORD *)&value->un.vechi[9] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4020:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[9] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4021:12: error: expected expression
*( _OWORD *)&value->un.vechi[7] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4021:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[7] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4022:12: error: expected expression
*( _OWORD *)&value->un.vechi[5] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4022:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[5] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4023:12: error: expected expression
*( _OWORD *)&value->un.vechi[3] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4023:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[3] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4024:12: error: expected expression
*( _OWORD *)&value->un.vechi[1] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/varasm.c:4024:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&value->un.vechi[1] = 0LL; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_rtx_const/src/obj/varasm.o] Error 1
